# docs/swagger.json
@@ -572,7 +572,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "update profile",
+                "summary": "update user data",
                 "parameters": [
                     {
                         "type": "string",
@@ -675,6 +675,12 @@
                 "name": {
                     "type": "string"
                 },
+                "role_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "updated_at": {
                     "type": "string"
                 }
@@ -747,12 +753,19 @@
         "request.UserUpdate": {
             "type": "object",
             "required": [
-                "name"
+                "name",
+                "role_ids"
             ],
             "properties": {
                 "name": {
                     "type": "string",
                     "maxLength": 50
+                },
+                "role_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
