# internal/handler/v1/request/user.go
@@ -8,6 +8,7 @@ type (
 	}
 
 	UserUpdate struct {
-		Name string `json:"name" validate:"required,max=50"`
+		Name    string   `json:"name" validate:"required,max=50"`
+		RoleIDs []string `json:"role_ids" validate:"required,dive,mongodb"`
 	}
 )
